# fractal-anim

./: .gitignore  LICENSE  Makefile  Readme.md  compile_flags.txt  make.d  meson.build
doc/: Algos-Trans.md  Key_Functions.txt
log/: fractal-anim-cfg.toml
scripts/: license-header.txt  license.fish  source-list.fish  update-copyright.fish
src/: aggreg.cpp  aggreg.h  animation.cpp  animation.h  autoscale.cpp  autoscale.h  aux_func.cpp  aux_func.h  cfg_toml.cpp  cfg_toml.h  colors.cpp  colors.h  config.h.in  dbg_report.cpp  dbg_report.h  demo_func.cpp  demo_func.h  draw.cpp  fluctuate.cpp  fluctuate.h  fractal.h  garbage_coll.h  light.cpp  light.h  logtxt.cpp  logtxt.h  main.cpp  opt_lyra.cpp  opt_lyra.h  recurrence.cpp  sources.txt  text_draw.cpp  text_draw.h  transform.cpp  transform.h  vec2angle.cpp  vec2rotate.cpp  windy.cpp  windy.h
subprojects/Lyra/: meson.build
subprojects/Lyra/docs/: lyra.adoc  lyra.html
